--- a/MyShuttle/MyShuttle/MyShuttle.Web.csproj
+++ b/MyShuttle/MyShuttle/MyShuttle.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -10,6 +10,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyShuttle.Data\MyShuttle.Data.csproj" />
+    <ProjectReference Include="..\MyShuttle.Model\MyShuttle.Model.csproj" />
   </ItemGroup>
 
 </Project>
